--- a/env/BOLT-TRUST/env.js.j2
+++ b/env/BOLT-TRUST/env.js.j2
@@ -4,8 +4,8 @@ let env = {
   keyStoneUrl: 'http://127.0.0.1:5999',
   keyChainUrl: 'http://127.0.0.1:5566',
   development: {
-    username: 'howhow',
-    password: 'DRFnNN67',
+    username: '{{ postgresUser }}',
+    password: '{{ postgresPassword }}',
     database: 'trust',
     host: '127.0.0.1',
     dialect: 'postgres',
