--- a/env/BOLT-KEYCHAIN/env.js.j2
+++ b/env/BOLT-KEYCHAIN/env.js.j2
@@ -1,6 +1,6 @@
 let env = {
   nodeUrl: 'http://127.0.0.1:3000',
-  web3Url: 'ws://127.0.0.1:8546',
+  web3Url: '{{ web3Url }}',
   keyStoneUrl: 'http://127.0.0.1:5999',
 };
 
