--- a/env/BOLT-CURRENCY/env.js.j2
+++ b/env/BOLT-CURRENCY/env.js.j2
@@ -3,7 +3,7 @@ let env = {
   web3Url: '{{ web3Url }}',
   keyStoneUrl: 'http://127.0.0.1:5999',
   keyChainUrl: "http://127.0.0.1:5566",
-  signerKey: '76a2c8b0be1eca1f6404ce35fa5f4acbc1ee9dc9768e5da16df40049054aeddf'
+  signerKey: '{{ privateKey }}'
 };
 
 module.exports = env;
