--- a/env/BOLT-KEYSTONE/env.js.j2
+++ b/env/BOLT-KEYSTONE/env.js.j2
@@ -1,5 +1,5 @@
 let env = {
-  signerKey: 'ASDFGTREWAS',
+  signerKey: '{{ privateKey }}',
   lifeTime: '86400',
   keyChainUrl: 'http://127.0.0.1:5566'
 };
