--- a/env/HowInvest-AuthModule/private/config.toml.j2
+++ b/env/HowInvest-AuthModule/private/config.toml.j2
@@ -3,6 +3,9 @@ userID = "authModule"
 password = "{{ authModulePassword }}"
 microserviceAccountList = ["fundManagementAddress", "receptionDeskAddress"]
 
+[opAccount]
+userID = "opAccount"
+
 [microservice]
 keystone = "http://{{ bolt_microservice_ip }}:5999"
 keychain = "http://{{ bolt_microservice_ip }}:5566"
