update BOLT-AUTOMATION env

--- a/env/BOLT-AUTOMATION/env.js.j2
+++ b/env/BOLT-AUTOMATION/env.js.j2
@@ -6,21 +6,19 @@ const env = () => {
         keyChainUrl: "http://{{ bolt_microservice_ip }}:5566",
         TrustAssetUrl: "http://{{ bolt_microservice_ip }}:5567",
         currencyUrl: "http://{{ bolt_microservice_ip }}:3333",
-        orderEngineUrl: "http://127.0.0.1",
-        fundManagementUrl: "http://127.0.0.1",
-        receptionDesk: "http://{{ howinvest_microservice_ip }}:5668",
-        APIGatewayUrl: "http://127.0.0.1/api/v1"
+        APIGatewayUrl: "http://127.0.0.1/api/v1",
+        admin: {
+          userID: 'HowHowAdmin',
+          password: 'U2V9cKxqBSHX',
+        },
       };
     case "stage":
       return {
-        keyStoneUrl: "http://staging.boltchain.io:5999",
-        keyChainUrl: "http://staging.boltchain.io:5566",
-        TrustAssetUrl: "http://staging.boltchain.io:5567",
-        currencyUrl: "http://staging.boltchain.io:3333",
-        receptionDesk: "https://howinvest.boltchain.io:5668",
-        fundManagementUrl: "https://howinvest.boltchain.io",
-        orderEngineUrl: "https://howinvest.boltchain.io",
-        APIGatewayUrl: "https://howinvest.boltchain.io/api/v1"
+        keyStoneUrl: "",
+        keyChainUrl: "",
+        TrustAssetUrl: "",
+        currencyUrl: "",
+        APIGatewayUrl: ""
       };
     case "prod":
       return {
@@ -28,8 +26,6 @@ const env = () => {
         keyChainUrl: "",
         TrustAssetUrl: "",
         currencyUrl: "",
-        orderEngineUrl: "",
-        fundManagementUrl: ""
       };
     default:
       return { error: "Error env" };
