fix single-depley, update readme

--- a/env/BOLT-TRUST/env.js.j2
+++ b/env/BOLT-TRUST/env.js.j2
@@ -11,6 +11,11 @@ let env = {
     dialect: 'postgres',
     logging: false,
     operatorsAliases: operators,
+    dialectOptions: {
+      options: {
+        connectTimeout: 3000,
+      },
+    },
     pool: {
       max: 100
     }
