--- a/env/gringotts/env.js.j2
+++ b/env/gringotts/env.js.j2
@@ -2,23 +2,27 @@ var argv = require('minimist')(process.argv.slice(2), { string: ['serverAddress'
 var operators = require('sequelize').Op;
 
 let env = {
-  //web3Url: 'ws://localhost:8546',
-  web3Url: 'ws://18.140.67.139:8546',
+  web3Url: 'ws://{{ web3Url }}:8546',
   serverUrl: 'http://127.0.0.1:3001',
   serverAddress: '0xd0C9AB4388871c662e95BBD3286B00f2cEDD09CE',
   contractAddress: '',
   boosterPort: '3000',
-  signerKey: '',
+  signerKey: 'f0da8604c69db1c659b5a87bd0124088243ad215217a0e06ed5901de5c0162cd',
   btcKey:'934waTMCujKrTr3vWyL3EcoemM7y4wWNUKsEvZcrR4185VxQVUW',
   production: {
-    username: 'howhow',
-    password: 'DRFnNN67',
+    username: '{{ postgresUser }}',
+    password: '{{ postgresPassword }}',
     database: 'bolt',
     host: '127.0.0.1',
     port: '5432',
     dialect: 'postgres',
     logging: false,
     operatorsAliases: operators,
+    dialectOptions: {
+      options: {
+        connectTimeout: 3000,
+      },
+    },
     pool: {
       max: 100
     }
@@ -26,7 +30,7 @@ let env = {
   generateEmptyTx: true,
   ipfs: {
     peers: [],
-    repo: '/home/tideops/ipfs'
+    repo: '/home/{{ agent_user }}/ipfs'
   }
 };
 
