--- a/env/BOLT-KEYCHAIN/env.js.j2
+++ b/env/BOLT-KEYCHAIN/env.js.j2
@@ -1,6 +1,6 @@
 let env = {
   nodeUrl: 'http://127.0.0.1:3000',
-  web3Url: '{{ web3Url }}',
+  web3Url: 'ws://{{ web3Url }}:8546',
   keyStoneUrl: 'http://127.0.0.1:5999',
 };
 
