--- a/env/contracts/env.js.j2
+++ b/env/contracts/env.js.j2
@@ -1,6 +1,6 @@
 let env = {
   devnet: {
-    web3Url: 'http://{{ web3Url }}:8545',
+    web3Url: 'https://{{ web3Url }}',
     privateKey: '{{ privateKey }}',
   },
   testnet: {
