--- a/env/gringotts/env.js.j2
+++ b/env/gringotts/env.js.j2
@@ -2,12 +2,12 @@ var argv = require('minimist')(process.argv.slice(2), { string: ['serverAddress'
 var operators = require('sequelize').Op;
 
 let env = {
-  web3Url: 'ws://{{ web3Url }}:8546',
+  web3Url: 'wss://{{ web3Url }}',
   serverUrl: 'http://127.0.0.1:3001',
   serverAddress: '0xd0C9AB4388871c662e95BBD3286B00f2cEDD09CE',
   contractAddress: '',
   boosterPort: '3000',
-  signerKey: 'f0da8604c69db1c659b5a87bd0124088243ad215217a0e06ed5901de5c0162cd',
+  signerKey: '{{ privateKey }}',
   btcKey:'934waTMCujKrTr3vWyL3EcoemM7y4wWNUKsEvZcrR4185VxQVUW',
   production: {
     username: '{{ postgresUser }}',
